CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/modules/")

FIND_PACKAGE(Boost COMPONENTS filesystem system date_time REQUIRED)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

ADD_LIBRARY(mod01 SHARED mod01.cpp)
TARGET_LINK_LIBRARIES(mod01 mathematica++)
# TARGET_LINK_LIBRARIES(mod01 ${Mathematica_WolframLibrary_LIBRARIES})
