CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/modules/")

FIND_PACKAGE(Boost COMPONENTS filesystem system date_time REQUIRED)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

IF(WITH_LL)

ADD_LIBRARY(mod01 SHARED mod01.cpp)
TARGET_LINK_LIBRARIES(mod01 mathematica++)

ADD_LIBRARY(mod02 SHARED mod02.cpp)
TARGET_LINK_LIBRARIES(mod02 mathematica++)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/mod02.m.in ${CMAKE_CURRENT_SOURCE_DIR}/mod02.m)

ADD_LIBRARY(mod03 SHARED mod03.cpp)
TARGET_LINK_LIBRARIES(mod03 mathematica++)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/mod03.m.in ${CMAKE_CURRENT_SOURCE_DIR}/mod03.m)

ENDIF()
